k8s/dev/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: practice-dashboard-gateway
  namespace: practice-dashboard-gateway
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: practice-dashboard-gateway
  template:
    metadata:
      labels:
        app: practice-dashboard-gateway
    spec:
      containers:
        - name: practice-dashboard-gateway
          image: docker.io/library/practice-dashboard-gateway:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8098
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8098
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8098
            initialDelaySeconds: 30
            periodSeconds: 20
