k8s/dev/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: practice-dashboard-gateway
  namespace: practice-dashboard-gateway
spec:
  selector:
    app: practice-dashboard-gateway
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8098

  type: ClusterIP
