k8s/dev/gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: practice-dashboard-gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: practice-dashboard-dev.sandhata.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: practice-dashboard-gateway
                port:
                  number: 8080
